WIP pre-@kieranhj runthrough

--- a/abug2020/index.html
+++ b/abug2020/index.html
@@ -802,7 +802,7 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']
                     <h2>Features</h2>
                     <ul>
                         <li>Fullscreen</li>
-                        <li>Debugger</li>
+                        <li>Freeze / Debugger</li>
                         <li>Printer</li>
                     </ul>
                 </section>
@@ -829,8 +829,15 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']
                         <li>Loading <code>?disc=XX</code></li>
                         <li>Loading BASIC <code>?loadBasic=XX</code></li>
                         <li>Booting <code>?autoboot</code></li>
-                        <li><a href="http://bbc.godbolt.org/?patch=@31ac,0769:6e6c6d68667a">Patching</a> (<a href="https://xania.org/201406/elites-crazy-string-format">blog</a>)</li>
+                        <li><a href="http://bbc.godbolt.org/?patch=@31ac,0769:6e6c6d68667a">Patching</a> (<a
+                                href="https://xania.org/201406/elites-crazy-string-format">blog</a>)</li>
+                        <li><a href="https://github.com/mattgodbolt/jsbeeb#url-parameters">Many more</a></li>
                     </ul>
+                </section>
+                <section>
+                    <h2>Just in!</h2>
+                    <a href="https://github.com/mattgodbolt/jsbeeb/releases/tag/v0.0.5" target="_blank">"Native"
+                        jsbeeb</a>
                 </section>
             </section>
 
