--- a/abug2020/index.html
+++ b/abug2020/index.html
@@ -313,6 +313,7 @@
                         <li>Loading <code>?disc=XX</code></li>
                         <li>Loading BASIC <code>?loadBasic=XX</code></li>
                         <li>Booting <code>?autoboot</code></li>
+                        <li><code>?noseek</code></li>
                         <li><a href="http://bbc.godbolt.org/?patch=@31ac,0769:6e6c6d68667a">Patching</a> (<a
                                 href="https://xania.org/201406/elites-crazy-string-format">blog</a>)</li>
                         <li><a href="https://github.com/mattgodbolt/jsbeeb#url-parameters">Many more</a></li>
@@ -456,7 +457,7 @@ b5 70     LDA $70, X   ; A = readmem(0x70 + X)
                     <pre><code class="javascript" data-trim>
 case 0xa9: // LDA #imm
   a = readmem(pc++);
-  p.z = !!a;
+  p.z = !a;
   p.n = !!(a &amp; 0x80);
   break;             </code></pre>
                 </section>
@@ -548,7 +549,7 @@ function writemem(addr, b) {
                     <ul>
                         <li>Run CPU for 1/60th second</li>
                         <li>Paint the screen!</li>
-                        <li><a href="https://bbc.godbolt.org/?videoCyclesBatch=8000&keyLayout=physical&autoboot"
+                        <li><a href="https://bbc.godbolt.org/?videoCyclesBatch=8000&keyLayout=physical&autoboot&noseek"
                                 target="_blank">Demo</a> </li>
                     </ul>
                 </section>
@@ -568,7 +569,7 @@ case 0xa9: // LDA #imm
 </div>  break;
                      </code></pre>
 
-                    <h3 class="fragment"><a href="https://bbc.godbolt.org/?disc=elite.ssd&autoboot&keyLayout=physical"
+                    <h3 class="fragment"><a href="https://bbc.godbolt.org/?disc=elite.ssd&autoboot&keyLayout=physical&noseek"
                             target="_blank">Demo</a>
                     </h3>
                 </section>
@@ -580,7 +581,7 @@ case 0xa9: // LDA #imm
                     <h2>More games</h2>
                     <img src="Zalaga.png" class="stretch">
                     <h3>
-                        <a href="https://bbc.godbolt.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master"
+                        <a href="https://bbc.godbolt.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master&noseek"
                             target="_blank">Zalaga</a></h3>
                     <aside class="notes">Fun part of emulation! e.g. address $1114. SAX zp instruction. show debugger
                     </aside>
