--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <li><a href="avast">Avast 2018</a> - a talk I gave at Avast. The video is on <a href="https://www.youtube.com/watch?v=mxPM-exDCLY">YouTube</a>.</li>
     <li><a href="nng">NNG 2019</a></li>
     <li><a href="abug2020">ABUG 2020</a></li>
+    <li><a href="aq">Aquatic 2020</a></li>
 </ul>
 
 </body>
