--- a/abug2020/index.html
+++ b/abug2020/index.html
@@ -277,7 +277,7 @@
                 <section>
                     <h2>jsbeeb</h2>
                     <ul>
-                        <li>Live at <a href="https://bbc.godbolt.org" target="_blank">bbc.godbolt.org</a></li>
+                        <li>Live at <a href="https://bbc.xania.org" target="_blank">bbc.xania.org</a></li>
                         <li>Powers <a href="https://www.bbcmicro.co.uk">bbcmicro.co.uk</a></li>
                     </ul>
                 </section>
@@ -314,7 +314,7 @@
                         <li>Loading BASIC <code>?loadBasic=XX</code></li>
                         <li>Booting <code>?autoboot</code></li>
                         <li><code>?noseek</code></li>
-                        <li><a href="http://bbc.godbolt.org/?patch=@31ac,0769:6e6c6d68667a">Patching</a> (<a
+                        <li><a href="http://bbc.xania.org/?patch=@31ac,0769:6e6c6d68667a">Patching</a> (<a
                                 href="https://xania.org/201406/elites-crazy-string-format">blog</a>)</li>
                         <li><a href="https://github.com/mattgodbolt/jsbeeb#url-parameters">Many more</a></li>
                     </ul>
@@ -549,7 +549,7 @@ function writemem(addr, b) {
                     <ul>
                         <li>Run CPU for 1/60th second</li>
                         <li>Paint the screen!</li>
-                        <li><a href="https://bbc.godbolt.org/?videoCyclesBatch=8000&keyLayout=physical&autoboot&noseek"
+                        <li><a href="https://bbc.xania.org/?videoCyclesBatch=8000&keyLayout=physical&autoboot&noseek"
                                 target="_blank">Demo</a> </li>
                     </ul>
                 </section>
@@ -569,7 +569,7 @@ case 0xa9: // LDA #imm
 </div>  break;
                      </code></pre>
 
-                    <h3 class="fragment"><a href="https://bbc.godbolt.org/?disc=elite.ssd&autoboot&keyLayout=physical&noseek"
+                    <h3 class="fragment"><a href="https://bbc.xania.org/?disc=elite.ssd&autoboot&keyLayout=physical&noseek"
                             target="_blank">Demo</a>
                     </h3>
                 </section>
@@ -581,7 +581,7 @@ case 0xa9: // LDA #imm
                     <h2>More games</h2>
                     <img src="Zalaga.png" class="stretch">
                     <h3>
-                        <a href="https://bbc.godbolt.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master&noseek"
+                        <a href="https://bbc.xania.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master&noseek"
                             target="_blank">Zalaga</a></h3>
                     <aside class="notes">Fun part of emulation! e.g. address $1114. SAX zp instruction. show debugger
                     </aside>
@@ -850,7 +850,7 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']
                 <section>
                     <h2>Resources</h2>
                     <ul>
-                        <li>Play: <a href="https://bbc.godbolt.org/">bbc.godbolt.org</a></li>
+                        <li>Play: <a href="https://bbc.xania.org/">bbc.xania.org</a></li>
                         <li>Native client: <a
                                 href="https://github.com/mattgodbolt/jsbeeb/releases">github.com/mattgodbolt/jsbeeb/releases</a>
                         </li>
