--- a/aq/index.html
+++ b/aq/index.html
@@ -550,7 +550,7 @@ function writemem(addr, b) {
                 </section>
                 <section>
                     <h2><a
-                            href="https://bbc.godbolt.org/?videoCyclesBatch=8000&disc=Welcome.ssd&keyLayout=physical">Demo</a>
+                            href="https://bbc.xania.org/?videoCyclesBatch=8000&disc=Welcome.ssd&keyLayout=physical">Demo</a>
                     </h2>
                     <aside class="notes">
                         <ul>
@@ -578,7 +578,7 @@ case 0xa9: // LDA #imm
                      </code></pre>
 
                     <h3 class="fragment"><a
-                            href="https://bbc.godbolt.org/?disc=elite.ssd&autoboot&keyLayout=physical">Demo</a>
+                            href="https://bbc.xania.org/?disc=elite.ssd&autoboot&keyLayout=physical">Demo</a>
                     </h3>
                 </section>
             </section>
@@ -590,7 +590,7 @@ case 0xa9: // LDA #imm
                     <img src="Zalaga.png" class="stretch">
                     <h3>
                         <a
-                            href="https://bbc.godbolt.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master">Zalaga</a>
+                            href="https://bbc.xania.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master">Zalaga</a>
                     </h3>
                     <aside class="notes">Fun part of emulation! e.g. address $1114. SAX zp instruction. show debugger
                     </aside>
@@ -859,11 +859,11 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']
                 <section>
                     <h2>Resources</h2>
                     <ul>
-                        <li><a href="https://bbc.godbolt.org/">https://bbc.godbolt.org/</a></li>
+                        <li><a href="https://bbc.xania.org/">https://bbc.xania.org/</a></li>
                         <li>Source on <a href="https://github.com/mattgodbolt/jsbeeb">github.com/mattgodbolt/jsbeeb</a>
                         </li>
                         <li><a href="http://visual6502.org">http://visual6502.org/</a></li>
-                        <li><a href="https://bbc.godbolt.org/?disc=https://bitshifters.github.io/content/EvilIn11.ssd&autoboot&model=Master">Bitshifters' latest demo</a></li>
+                        <li><a href="https://bbc.xania.org/?disc=https://bitshifters.github.io/content/EvilIn11.ssd&autoboot&model=Master">Bitshifters' latest demo</a></li>
                     </ul>
                 </section>
                 <section>
@@ -871,16 +871,16 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']
                     <ul>
                         <li>
                             <a
-                                href="https://bbc.godbolt.org/?disc=https://bitshifters.github.io/content/bs-scr-beeb.ssd&autoboot&model=Master">
+                                href="https://bbc.xania.org/?disc=https://bitshifters.github.io/content/bs-scr-beeb.ssd&autoboot&model=Master">
                                 Stunt Car Racer
                             </a></li>
                         <li>
                             <a
-                                href="https://bbc.godbolt.org/?disc=https://bitshifters.github.io/content/crtc-somenastyeffects.ssd&autoboot&model=Master">Some
+                                href="https://bbc.xania.org/?disc=https://bitshifters.github.io/content/crtc-somenastyeffects.ssd&autoboot&model=Master">Some
                                 Nasty Effects</a></li>
                         <li>
                             <a
-                                href="https://bbc.godbolt.org/?disc=https://bitshifters.github.io/content/TheMaster-Demo128.ssd&autoboot&model=Master">The
+                                href="https://bbc.xania.org/?disc=https://bitshifters.github.io/content/TheMaster-Demo128.ssd&autoboot&model=Master">The
                                 Master</a></li>
                         <!--<li><a href="http://localhost/jsbeeb/?disc=Blurp.ssd&autoboot&keyLayout=physical">Blurp</a></li>-->
                         <li><a href="https://bitshifters.github.io/">Bitshifters</a></li>
