--- a/demosplash2017/index.html
+++ b/demosplash2017/index.html
@@ -314,7 +314,7 @@ while (true) {
             </ul>
         </section>
         <section>
-            <h2><a href="http://bbc.godbolt.org/?videoCyclesBatch=8000&disc=Welcome.ssd&keyLayout=physical"
+            <h2><a href="http://bbc.xania.org/?videoCyclesBatch=8000&disc=Welcome.ssd&keyLayout=physical"
                    target="_blank">Demo</a></h2>
             <aside class="notes">
                 <ul>
@@ -339,7 +339,7 @@ case 0xa9: // LDA #imm
   break;
                      </code></pre>
 
-            <h3 class="fragment"><a href="http://bbc.godbolt.org/?disc=elite.ssd&autoboot&keyLayout=physical"
+            <h3 class="fragment"><a href="http://bbc.xania.org/?disc=elite.ssd&autoboot&keyLayout=physical"
                                     target="_blank">Demo</a>
             </h3>
         </section>
@@ -348,7 +348,7 @@ case 0xa9: // LDA #imm
             <h2>More games</h2>
             <img src="Zalaga.png" class="stretch">
             <h3>
-                <a href="http://bbc.godbolt.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master"
+                <a href="http://bbc.xania.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master"
                    target="_blank">Zalaga</a></h3>
             <aside class="notes">Fun part of emulation! e.g. address $1114. SAX zp instruction. show debugger</aside>
         </section>
@@ -527,7 +527,7 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']
         <section>
             <h2>Resources</h2>
             <ul>
-                <li><a href="https://bbc.godbolt.org/">https://bbc.godbolt.org/</a></li>
+                <li><a href="https://bbc.xania.org/">https://bbc.xania.org/</a></li>
                 <li>Source on <a href="https://github.com/mattgodbolt/jsbeeb">github.com/mattgodbolt/jsbeeb</a></li>
                 <li><a href="http://visual6502.org">http://visual6502.org/</a></li>
                 <li>Special thanks to
