--- a/drw/index.html
+++ b/drw/index.html
@@ -687,7 +687,7 @@ if (scrx &gt;= curEndPos) {
             </ul>
         </section>
         <section>
-            <h2><a href="http://bbc.godbolt.org/?autoboot" target="_blank">Live demo!</a></h2>
+            <h2><a href="http://bbc.xania.org/?autoboot" target="_blank">Live demo!</a></h2>
         </section>
         <section>
             <section>
@@ -722,7 +722,7 @@ if (scrx &gt;= curEndPos) {
             <section>
                 <h2>Any questions?</h2>
                 <ul>
-                    <li><a href="http://bbc.godbolt.org/">http://bbc.godbolt.org/</a></li>
+                    <li><a href="http://bbc.xania.org/">http://bbc.xania.org/</a></li>
                     <li>Source on <a href="https://github.com/mattgodbolt/jsbeeb">github</a></li>
                     <li><a href="http://visual6502.org">http://visual6502.org/</a></li>
                 </ul>
