--- a/goto/index.html
+++ b/goto/index.html
@@ -333,7 +333,7 @@ while (true) {
             </ul>
         </section>
         <section>
-            <h2><a href="https://bbc.godbolt.org/?videoCyclesBatch=8000&disc=Welcome.ssd&keyLayout=physical" target="_blank">Demo</a></h2>
+            <h2><a href="https://bbc.xania.org/?videoCyclesBatch=8000&disc=Welcome.ssd&keyLayout=physical" target="_blank">Demo</a></h2>
             <aside class="notes">
                 <ul>
                     <li>Show MODE 7, another video mode.</li>
@@ -357,14 +357,14 @@ case 0xa9: // LDA #imm
   break;
                      </code></pre>
 
-            <h3 class="fragment"><a href="https://bbc.godbolt.org/?disc=elite.ssd&autoboot&keyLayout=physical" target="_blank">Demo</a>
+            <h3 class="fragment"><a href="https://bbc.xania.org/?disc=elite.ssd&autoboot&keyLayout=physical" target="_blank">Demo</a>
             </h3>
         </section>
 
         <section>
             <h2>More games</h2>
             <img src="Zalaga.png" class="stretch">
-            <h3><a href="https://bbc.godbolt.org/?disc=sth%3AAardvark%2FZalaga.zip&autoboot&keyLayout=gaming&model=Master"
+            <h3><a href="https://bbc.xania.org/?disc=sth%3AAardvark%2FZalaga.zip&autoboot&keyLayout=gaming&model=Master"
                    target="_blank">Zalaga</a></h3>
             <aside class="notes">Fun part of emulation! e.g. address $1114. SAX zp instruction. show debugger</aside>
         </section>
@@ -554,7 +554,7 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']}
         <section>
             <h2>Resources</h2>
             <ul>
-                <li><a href="http://bbc.godbolt.org/">http://bbc.godbolt.org/</a></li>
+                <li><a href="http://bbc.xania.org/">http://bbc.xania.org/</a></li>
                 <li>Source on <a href="https://github.com/mattgodbolt/jsbeeb">github.com/mattgodbolt/jsbeeb</a></li>
                 <li><a href="http://visual6502.org">http://visual6502.org/</a></li>
                 <li>Special thanks to
