--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <h1>Slides on jsbeeb</h1>
 
-<div>I've given a few presentations on <a href="https://bbc.godbolt.org/">jsbeeb</a> and have made them available
+<div>I've given a few presentations on <a href="https://bbc.xania.org/">jsbeeb</a> and have made them available
     here:
 </div>
 
@@ -47,6 +47,7 @@
     <li><a href="nng">NNG 2019</a></li>
     <li><a href="abug2020">ABUG 2020</a></li>
     <li><a href="aq">Aquatic 2020</a></li>
+    <li><a href="spacex">SpaceX 2024</a></li>
 </ul>
 
 </body>
