--- a/cppcon2017/index.html
+++ b/cppcon2017/index.html
@@ -557,7 +557,7 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']}
         <section>
             <h2>Resources</h2>
             <ul>
-                <li><a href="https://bbc.godbolt.org/">https://bbc.godbolt.org/</a></li>
+                <li><a href="https://bbc.xania.org/">https://bbc.xania.org/</a></li>
                 <li>Source on <a href="https://github.com/mattgodbolt/jsbeeb">github.com/mattgodbolt/jsbeeb</a></li>
                 <li><a href="http://visual6502.org">http://visual6502.org/</a></li>
                 <li>Special thanks to
