--- a/nng/index.html
+++ b/nng/index.html
@@ -541,7 +541,7 @@ function writemem(addr, b) {
                 </ul>
             </section>
             <section>
-                <h2><a href="https://bbc.godbolt.org/?videoCyclesBatch=8000&disc=Welcome.ssd&keyLayout=physical"
+                <h2><a href="https://bbc.xania.org/?videoCyclesBatch=8000&disc=Welcome.ssd&keyLayout=physical"
                        target="_blank">Demo</a></h2>
                 <aside class="notes">
                     <ul>
@@ -568,7 +568,7 @@ case 0xa9: // LDA #imm
 </div>  break;
                      </code></pre>
 
-                <h3 class="fragment"><a href="https://bbc.godbolt.org/?disc=elite.ssd&autoboot&keyLayout=physical"
+                <h3 class="fragment"><a href="https://bbc.xania.org/?disc=elite.ssd&autoboot&keyLayout=physical"
                                         target="_blank">Demo</a>
                 </h3>
             </section>
@@ -580,7 +580,7 @@ case 0xa9: // LDA #imm
                 <h2>More games</h2>
                 <img src="Zalaga.png" class="stretch">
                 <h3>
-                    <a href="https://bbc.godbolt.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master"
+                    <a href="https://bbc.xania.org/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master"
                        target="_blank">Zalaga</a></h3>
                 <aside class="notes">Fun part of emulation! e.g. address $1114. SAX zp instruction. show debugger
                 </aside>
@@ -861,7 +861,7 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']
             <section>
                 <h2>Resources</h2>
                 <ul>
-                    <li><a href="https://bbc.godbolt.org/">https://bbc.godbolt.org/</a></li>
+                    <li><a href="https://bbc.xania.org/">https://bbc.xania.org/</a></li>
                     <li>Source on <a href="https://github.com/mattgodbolt/jsbeeb">github.com/mattgodbolt/jsbeeb</a></li>
                     <li><a href="http://visual6502.org">http://visual6502.org/</a></li>
                     <li>Special thanks to
@@ -880,14 +880,14 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']
                 <h2>Some Demos</h2>
                 <ul>
                     <li>
-                        <a href="https://bbc.godbolt.org/?disc=https://bitshifters.github.io/content/bs-scr-beeb.ssd&autoboot&model=Master">
+                        <a href="https://bbc.xania.org/?disc=https://bitshifters.github.io/content/bs-scr-beeb.ssd&autoboot&model=Master">
                             Stunt Car Racer
                         </a></li>
                     <li>
-                        <a href="https://bbc.godbolt.org/?disc=https://bitshifters.github.io/content/crtc-somenastyeffects.ssd&autoboot&model=Master">Some
+                        <a href="https://bbc.xania.org/?disc=https://bitshifters.github.io/content/crtc-somenastyeffects.ssd&autoboot&model=Master">Some
                             Nasty Effects</a></li>
                     <li>
-                        <a href="https://bbc.godbolt.org/?disc=https://bitshifters.github.io/content/TheMaster-Demo128.ssd&autoboot&model=Master">The
+                        <a href="https://bbc.xania.org/?disc=https://bitshifters.github.io/content/TheMaster-Demo128.ssd&autoboot&model=Master">The
                             Master</a></li>
                     <!--<li><a href="http://localhost/jsbeeb/?disc=Blurp.ssd&autoboot&keyLayout=physical">Blurp</a></li>-->
                     <li><a href="https://bitshifters.github.io/">Bitshifters</a></li>
